api-reviews almost fully done, only two last GET's to do
